--- a/index.html
+++ b/index.html
@@ -182,14 +182,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-6">
-                   <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
-<script>
-  hbspt.forms.create({
-    region: "na1",
-    portalId: "24292948",
-    formId: "ad0ce64c-6ef3-4627-9a33-09465a07bced"
-  });
-</script></div>
+                   <img src="images/img-2.png"></div>
                </div>
                <div class="col-md-6">
                   <h1 class="about_taital">About <span class="us_text">Us</span></h1>
