--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
       <div class="header_section">
          <div class="container">
             <nav class="navbar navbar-dark bg-dark">
-               <a herf="https://avivdigital.in/">
-               <a class="logo" href="index.html"><img src="images/Acowebs-Logo.png">
+               <a class="logo" href="https://avivdigital.in"><img src="images/Acowebs-Logo.png">
                </a>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
                </button>
